--- a/doctor/static/doctor/css/menu.css
+++ b/doctor/static/doctor/css/menu.css
@@ -177,7 +177,7 @@ ul ul a {
   background-color: #85144b;
 }
 
-.bg-custom-2 {
+.bg-custom-2 {input
 background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
 }
 #headingOne{
