--- a/account/templates/account/base.html
+++ b/account/templates/account/base.html
@@ -235,7 +235,7 @@
 								<a href="#nav-rooms" data-toggle="collapse" aria-expanded="false">
 									<span class="ti-key"></span> Room Allotments
 								</a>
-								<ul class="collapse list-unstyled" id="nav-rooms">	
+								<ul class="collapse list-unstyled" id="nav-rooms">
 									<li>
 										<a href="{% url 'doctor:addRoom' %}">Add Room Allotment</a>
 									</li>
@@ -585,6 +585,89 @@
 
       });
   });
+// On click javascript add form field
+	$(function()
+	{
+	    $(document).on('click', '.btn-add', function(e)
+	    {
+	        e.preventDefault();
+
+	        var controlForm = $('.controls form:first'),
+	            currentEntry = $(this).parents('.entry:first'),
+	            newEntry = $(currentEntry.clone()).appendTo(controlForm);
+
+	        newEntry.find('input').val('');
+	        controlForm.find('.entry:not(:last) .btn-add')
+	            .removeClass('btn-add').addClass('btn-remove')
+	            .removeClass('btn-success').addClass('btn-danger')
+	            .html('<span class="fas fa-minus"></span>');
+	    }).on('click', '.btn-remove', function(e)
+	    {
+	    $(this).parents('.entry:first').remove();
+
+	    e.preventDefault();
+	    return false;
+	  });
+	});
+
+
+ // dynamically adding form fields for symptoms-->
+	function updateElementIndex(el, prefix, ndx) {
+	    var id_regex = new RegExp('(' + prefix + '-\\d+)');
+	    var replacement = prefix + '-' + ndx;
+	    if ($(el).attr("for")) $(el).attr("for", $(el).attr("for").replace(id_regex, replacement));
+	    if (el.id) el.id = el.id.replace(id_regex, replacement);
+	    if (el.name) el.name = el.name.replace(id_regex, replacement);
+	}
+	function cloneMore(selector, prefix) {
+	    var newElement = $(selector).clone(true);
+	    var total = $('#id_' + prefix + '-TOTAL_FORMS').val();
+	    newElement.find(':input:not([type=button]):not([type=submit]):not([type=reset])').each(function() {
+	        var name = $(this).attr('name').replace('-' + (total-1) + '-', '-' + total + '-');
+	        var id = 'id_' + name;
+	        $(this).attr({'name': name, 'id': id}).val('').removeAttr('checked');
+	    });
+	    newElement.find('label').each(function() {
+	        var forValue = $(this).attr('for');
+	        if (forValue) {
+	          forValue = forValue.replace('-' + (total-1) + '-', '-' + total + '-');
+	          $(this).attr({'for': forValue});
+	        }
+	    });
+	    total++;
+	    $('#id_' + prefix + '-TOTAL_FORMS').val(total);
+	    $(selector).after(newElement);
+	    var conditionRow = $('.form-row:not(:last)');
+	    conditionRow.find('.btn.add-form-row')
+	    .removeClass('btn-success').addClass('btn-danger')
+	    .removeClass('add-form-row').addClass('remove-form-row')
+	    .html('<span class="fas fa-minus" aria-hidden="true"></span>');
+	    return false;
+	}
+	function deleteForm(prefix, btn) {
+	    var total = parseInt($('#id_' + prefix + '-TOTAL_FORMS').val());
+	    if (total > 1){
+	        btn.closest('.form-row').remove();
+	        var forms = $('.form-row');
+	        $('#id_' + prefix + '-TOTAL_FORMS').val(forms.length);
+	        for (var i=0, formCount=forms.length; i<formCount; i++) {
+	            $(forms.get(i)).find(':input').each(function() {
+	                updateElementIndex(this, prefix, i);
+	            });
+	        }
+	    }
+	    return false;
+	}
+	$(document).on('click', '.add-form-row', function(e){
+	    e.preventDefault();
+	    cloneMore('.form-row:last', 'form');
+	    return false;
+	});
+	$(document).on('click', '.remove-form-row', function(e){
+	    e.preventDefault();
+	    deleteForm('form', $(this));
+	    return false;
+	});
 
   </script>
 
